--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,112 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;500;700&display=swap');
+
+* {
+   scroll-behavior: smooth;
+}
+
+body {
+   font-family: 'Montserrat', sans-serif;
+}
 .App {
-  text-align: center;
+   
+   min-height: 100vh;
+   background-color: #39445a;
+   color: #fff;
+   padding-top: 130px;
+   padding-bottom: 70px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@media (max-width: 700px) {
+   .App {
+      padding-top: 70px;
+   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header {
+   width: 100%;
+   cursor: pointer;
+   position: fixed;
+   display: flex;
+   justify-content: center;
+   text-transform: uppercase;
+   background-color: #39445a;
+   
+   font-size: 5vw;
+   font-weight: 100;
+   padding-bottom: 15px;
+   box-shadow: 0px 1px 5px black;
+   color: #fff;
+   z-index: 100;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@media (max-width:1000px) {
+   .header {
+      padding-top: 15px;
+      font-size: 6.4vw;
+   }
 }
 
-.App-link {
-  color: #61dafb;
+.media {
+   display: flex;
+   flex-direction: column;
+   width: 250px;
+   padding: 5px;
+   margin: 5px 0;
+   background-color: #282c34;
+   border-radius: 10px;
+   position: relative;
+   
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.media:hover {
+   background-color: white;
+   color: #000;
 }
+
+@media (max-width: 550px) {
+   .media {
+      width: 46%;
+   }
+}
+
+.poster {
+   border-radius: 10px;
+}
+
+.title {
+   width: 100%;
+   text-align: center;
+   font-size: 17px;
+   padding: 8px 0;
+}
+
+.subtitle {
+   display: flex;
+   justify-content: space-between;
+   padding: 0 5px;
+}
+
+.trending {
+   display: flex;
+   flex-wrap: wrap;
+   gap: 15px;
+   justify-content: space-around;
+}
+
+.pageTitle {
+   text-transform: uppercase;
+   display: flex;
+   justify-content: center;
+   font-size: 2vw;
+   font-weight: 100;
+   padding: 4px;
+   border-radius: 50px;
+   color: #fff;
+}
+
+@media (max-width: 1000px) {
+   .pageTitle {
+      font-size: 6.4vw;
+   }
+}
+
