--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;500;700&display=swap');
 
 * {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
    scroll-behavior: smooth;
 }
 
@@ -8,7 +11,6 @@ body {
    font-family: 'Montserrat', sans-serif;
 }
 .App {
-   
    min-height: 100vh;
    background-color: #39445a;
    color: #fff;
@@ -30,7 +32,7 @@ body {
    justify-content: center;
    text-transform: uppercase;
    background-color: #39445a;
-   
+
    font-size: 5vw;
    font-weight: 100;
    padding-bottom: 15px;
@@ -39,7 +41,7 @@ body {
    z-index: 100;
 }
 
-@media (max-width:1000px) {
+@media (max-width: 1000px) {
    .header {
       padding-top: 15px;
       font-size: 6.4vw;
@@ -55,7 +57,6 @@ body {
    background-color: #282c34;
    border-radius: 10px;
    position: relative;
-   
 }
 
 .media:hover {
@@ -109,4 +110,3 @@ body {
       font-size: 6.4vw;
    }
 }
-
